--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -7,3 +7,4 @@
 }
 @import '../Components//home/Navbar/navbar';
 @import '../Components/home/Header/Header';
+@import '../Components//Products/products';
