--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -205,4 +205,7 @@
 }
 .productContainer .product .product_text {
   margin-top: 10px;
+}
+.productContainer .btn {
+  margin: 20px;
 }/*# sourceMappingURL=index.css.map */
