--- a/src/Components/Products/_products.scss
+++ b/src/Components/Products/_products.scss
@@ -4,21 +4,34 @@
   justify-content: center;
   align-items: center;
   .product {
-    margin:20px;
+    margin: 20px;
     text-align: center;
     width: 300px;
-    height: 500px;
+    height: 100%;
 
-    .product_img{
-        width:300px !important;
-        height:500px !important;
+    .product_img {
+      width: 300px !important;
+      height: 500px !important;
+      border-radius: 10px;
     }
-    .product_text{
-        margin-top:10px;
+    .product_text {
+      margin-top: 10px;
+      color: #232323;
+      font-weight: 700;
     }
-    
   }
-  .btn{
+  .btn {
+    font-weight: 600;
     margin: 20px;
+    border-radius: 99em;
+    width: 130px;
+    height: 50px;
+    background-color: #eee;
+    border: none;
+    transition: all 0.4s ease-in-out;
+    &:hover{
+      color: #eee;
+      background-color: #232323;
+    }
   }
 }
