--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -4,6 +4,7 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
+  text-decoration: none;
 }
 
 .navbar {
@@ -197,15 +198,35 @@
   margin: 20px;
   text-align: center;
   width: 300px;
-  height: 500px;
+  height: 100%;
 }
 .productContainer .product .product_img {
   width: 300px !important;
   height: 500px !important;
+  border-radius: 10px;
 }
 .productContainer .product .product_text {
   margin-top: 10px;
+  color: #232323;
+  font-weight: 700;
 }
 .productContainer .btn {
+  font-weight: 600;
   margin: 20px;
+  border-radius: 99em;
+  width: 130px;
+  height: 50px;
+  background-color: #eee;
+  border: none;
+  transition: all 0.4s ease-in-out;
+}
+.productContainer .btn:hover {
+  color: #eee;
+  background-color: #232323;
+}
+
+.footer {
+  width: 100%;
+  height: 350px;
+  background-color: #eee;
 }/*# sourceMappingURL=index.css.map */
