--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,10 +1,14 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: "Inter", sans-serif;
-
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
 }
-@import '../Components//home/Navbar/navbar';
-@import '../Components/home/Header/Header';
-@import '../Components//Products/products';
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+
+@import "../Components//home/Navbar/navbar";
+@import "../Components/home/Header/Header";
+@import "../Components//Products/products";
+@import "../Components/Footer/footer";
+
