--- a/src/Components/Footer/_footer.scss
+++ b/src/Components/Footer/_footer.scss
@@ -1,5 +1,29 @@
-.footer{
+.footer {
+  margin-top: 50px;
+  width: 100%;
+  height: 350px;
+  background-color: #fff;
+  border-radius: 20px 20px;
+  box-shadow: 0 10px 25px 0 rgba(#000, 0.45);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  .footer_info {
+    text-align: center;
+    margin: 20px;
+    .footer_info-title {
+      margin-bottom: 10px;
+      font-size: 1.3em;
+      font-weight: 500;
+    }
+    svg {
+      margin: 10px 15px 0 0;
+    }
+  }
+  .maps {
     width: 100%;
-    height: 350px;
-    background-color: #eee;
+    height: 50%;
+    border: 0;
+  }
 }
