--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -253,4 +253,9 @@
   width: 100%;
   height: 50%;
   border: 0;
+}
+
+.carrito_btn {
+  width: 100px;
+  height: 30px;
 }/*# sourceMappingURL=index.css.map */
