--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -11,4 +11,6 @@
 @import "../Components/home/Header/Header";
 @import "../Components//Products/products";
 @import "../Components/Footer/footer";
+@import "../Components/Carrito/carrito";
+
 
